--- a/res/layout/accelerometerfragmentlayout.xml
+++ b/res/layout/accelerometerfragmentlayout.xml
@@ -4,11 +4,72 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="accelerometer"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <TextView
+            android:id="@+id/accel_lbl_x"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="67dp"
+            android:layout_marginTop="73dp"
+            android:text="x: "
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <TextView
+            android:id="@+id/accel_lbl_y"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/accel_lbl_x"
+            android:layout_below="@+id/accel_lbl_x"
+            android:layout_marginTop="42dp"
+            android:text="y: "
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <TextView
+            android:id="@+id/accel_lbl_z"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/accel_lbl_y"
+            android:layout_below="@+id/accel_lbl_y"
+            android:layout_marginTop="50dp"
+            android:text="z: "
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <TextView
+            android:id="@+id/accel_val_x"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/accel_lbl_x"
+            android:layout_alignBottom="@+id/accel_lbl_x"
+            android:layout_marginLeft="38dp"
+            android:layout_toRightOf="@+id/accel_lbl_x"
+            android:text="VAL X"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <TextView
+            android:id="@+id/accel_val_y"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/accel_lbl_y"
+            android:layout_alignBottom="@+id/accel_lbl_y"
+            android:layout_alignLeft="@+id/accel_val_x"
+            android:text="VAL Y"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <TextView
+            android:id="@+id/accel_val_z"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/accel_lbl_z"
+            android:layout_alignBottom="@+id/accel_lbl_z"
+            android:layout_alignLeft="@+id/accel_val_y"
+            android:text="VAL Z"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    </RelativeLayout>
 
 </LinearLayout>
