--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -10,11 +10,18 @@
             res/values-vXX/styles.xml, while customizations related to
             backward-compatibility can go here.
         -->
+        
+        
     </style>
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+         
+    </style>
+    
+    <style name="AppTheme" parent="android:Widget.TextView">
+    	<item name="android:textColor">@color/black</item>
     </style>
 
 </resources>
