--- a/res/layout/accelerometerfragmentlayout.xml
+++ b/res/layout/accelerometerfragmentlayout.xml
@@ -9,37 +9,6 @@
         android:layout_height="match_parent" >
 
         <TextView
-            android:id="@+id/accel_lbl_x"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="67dp"
-            android:layout_marginTop="73dp"
-            android:text="x: "
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <TextView
-            android:id="@+id/accel_lbl_y"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/accel_lbl_x"
-            android:layout_below="@+id/accel_lbl_x"
-            android:layout_marginTop="42dp"
-            android:text="y: "
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <TextView
-            android:id="@+id/accel_lbl_z"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/accel_lbl_y"
-            android:layout_below="@+id/accel_lbl_y"
-            android:layout_marginTop="50dp"
-            android:text="z: "
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <TextView
             android:id="@+id/accel_val_x"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -68,6 +37,47 @@
             android:layout_alignBottom="@+id/accel_lbl_z"
             android:layout_alignLeft="@+id/accel_val_y"
             android:text="VAL Z"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <TextView
+            android:id="@+id/accel_lbl_x"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="93dp"
+            android:layout_marginTop="29dp"
+            android:text="x: "
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <TextView
+            android:id="@+id/accel_lbl_y"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/accel_lbl_x"
+            android:layout_marginTop="29dp"
+            android:layout_toLeftOf="@+id/accel_val_x"
+            android:text="y: "
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <TextView
+            android:id="@+id/accel_lbl_z"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/accel_lbl_y"
+            android:layout_marginTop="33dp"
+            android:layout_toLeftOf="@+id/accel_val_x"
+            android:text="z: "
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <TextView
+            android:id="@+id/accel_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/accel_lbl_z"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="23dp"
+            android:text=""
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
     </RelativeLayout>
